--- a/firstround.css
+++ b/firstround.css
@@ -12,6 +12,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
+    margin-bottom: auto;
 }
 
 .title {
@@ -32,7 +33,7 @@ body {
 .points-row {
     display: flex;
     justify-content: center;
-
+    grid-template-columns: repeat(6, 1fr);
 }
 
 .category,
@@ -59,31 +60,50 @@ body {
     font-size: 16px;
 }
 
-/* .guess-button,
+.guess-button,
 .pass-button {
-    padding: 10px 20px;
-    font-size: 16px;
+    padding: 20px 20px;
+    font-size: 20px;
     margin-left: 10px;
     background-color: #007bff;
-    color: #fff;
+    color: black;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
 
-} */
+}
 
 .score-section {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    width: 50%;
 }
 
 .player-score {
-    margin-right: 20px;
+    font-size: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: space-between;
 }
 
 .player-name {
     font-weight: bold;
 }
+
+.next-round-button {
+    position: absolute;
+    bottom: 65px;
+    right: 30px;
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
 
 .footer {
     text-align: center;
