--- a/styles.folder/secondround.css
+++ b/styles.folder/secondround.css
@@ -4,7 +4,7 @@
         left: 80px;
         padding: 10px 20px;
         font-size: 16px;
-        background-color: #007bff;
+        background-color: blue;
         color: #fff;
         border: none;
         border-radius: 4px;
@@ -17,7 +17,7 @@
         right: 80px;
         padding: 10px 20px;
         font-size: 16px;
-        background-color: #007bff;
+        background-color: blue;
         color: #fff;
         border: none;
         border-radius: 4px;
